src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail40.jova
class Test{
  private int touchMe;
  private int touchmeMeth() {
          return 0;
      }
}

class Main {

  public int main() {
    Test test;
    int ret;

    test = new Test;
    test.touchMe = 1;

    ret = test.touchmeMeth();

    return 0;
  }

}